- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    5.8.0, 5.9.0 Beta 1
 - 
    None
 - 
    Windows 7 x64 SP1
Android 5.1 
- 
        46e4a33fe90b7ff21baffcb08194ef4c7b346df7 4a2d8d6ee54976e3a8e2218bc8e97c857688cdfe
 
Running attached example one can observe temporary very short time visual artifacts - triangles (faces) based on newly added vertices jump somewhere aside when setData followed by setCount is used quite frequently (video attached). In contrast updateData calls work fine (you can watch video slide by slide to be sure).
I did some test in my own application and can say that those jumped out vertices come back to the place they should thanks to next updates.
If there will be no updates after setData + setCount sometimes (not always) artifacts can remain, that is faces based on new vertexes are goes somewhere out of the screen (probably to 0 coordinate) and do not change anymore.
Firstly thought that it was due to that currently in qt 3d calling both QBuffer setData/functor and partial data update can lead to unexpected behavior.
Did the patch to improve that: https://codereview.qt-project.org/#/c/192767/ but it hasn't solved this issue.