src/render/geometry/buffer_p.h
@@ -90,6 +90,7 @@ public:
 
 private:
     void initializeFromPeer(const Qt3DCore::QNodeCreatedChangeBasePtr &change) Q_DECL_FINAL;
+    void forceDataUpload();
 
     QBuffer::BufferType m_type;
     QBuffer::UsageType m_usage;
